@@ -2,6 +2,8 @@ SVN from 0.66:
         - Rebuild: Fixed generation of libraries with DMD+GNU/Linux (see ticket
           #75).
         - Rebuild: Should now compile on FreeBSD (see ticket #82).
+        - Added an option (--keep-response-files for DSSS and -keeprfiles for
+          Rebuild) to not delete response files (see ticket #62).
 
 0.66 from 0.65:
         - Rebuild: Fixed a bug with -listnffiles and -of conflicting (see
